Fix timeline overlapping the footer

--- a/app/styles/examples.css
+++ b/app/styles/examples.css
@@ -6,7 +6,6 @@ padding: 1em;
 
 div#timelinecontainer{
 width: 100%;
-height: 280px;
 }
 
 div#timeline{
